--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,8 @@ server.port=8001
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.platform=h2
@@ -10,12 +12,15 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.defer-datasource-initialization=always
+spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
-spring.sql.init.data-locations=file:classpath:import.sql
 
+
+spring.flyway.baselineOnMigrate=true
+spring.flyway.check-location=true
+spring.flyway.locations=resources/migrations
+#spring.sql.init.data-locations=file:classpath:migrations/V1_0_date.sql
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
