--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,9 +17,9 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
-spring.flyway.baselineOnMigrate=true
-spring.flyway.check-location=true
-spring.flyway.locations=resources/migrations
+#spring.flyway.baselineOnMigrate=true
+#spring.flyway.check-location=true
+#spring.flyway.locations=resources/migrations
 #spring.sql.init.data-locations=file:classpath:migrations/V1_0_date.sql
 
 spring.mail.host=smtp.gmail.com
