--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.api-docs.path=/api-docs
-spring.profiles.active=prod
+spring.profiles.active=dev
