--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-server.port=8000
+server.port=8001
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -16,4 +16,6 @@ spring.mail.username=vetclinic850@gmail.com
 spring.mail.password=Test12345@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.flyway.baseline-on-migrate = true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.hbm2ddl.import_files=V1__init.sql
