update final prime to improve

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.jackson.deserialization.adjust-dates-to-context-time-zone=true
 spring.jackson.time-zone=Europe/Warsaw
 spring.datasource.username=root
@@ -15,3 +14,5 @@ springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.api-docs.path=/api-docs
 spring.profiles.active=dev
+spring.jpa.properties.hibernate.physical_naming_strategy=com.vladmihalcea.hibernate.naming.CamelCaseToSnakeCaseNamingStrategy
+app.host.url=http://localhost:8080
