--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,21 +1,21 @@
 server.port=8010
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.platform=h2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
+spring.jackson.deserialization.adjust-dates-to-context-time-zone=true
+spring.jackson.time-zone=Europe/Warsaw
+spring.jackson.date-format=yyyy-MM-dd hh:mm:ss
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vetclinic850@gmail.com
 spring.mail.password=Test12345@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.hbm2ddl.import_files=V1__init.sql
+spring.jpa.properties.hibernate.physical_naming_strategy=com.vladmihalcea.hibernate.naming.CamelCaseToSnakeCaseNamingStrategy
+app.host.url=http://localhost:8010
