--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,15 +6,16 @@ spring.datasource.username=root
 spring.datasource.password=12345
 server.port=8080
 spring.jackson.date-format=yyyy-MM-dd hh:mm:ss
-
+mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vetclinic850@gmail.com
 spring.mail.password=Test12345@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.api-docs.path=/api-docs
 spring.profiles.active=dev
+spring.jpa.properties.hibernate.physical_naming_strategy=com.vladmihalcea.hibernate.naming.CamelCaseToSnakeCaseNamingStrategy
+app.host.url=http://localhost:8080
